--- a/src/common/My_Subscribe_Callback.ipynb
+++ b/src/common/My_Subscribe_Callback.ipynb
@@ -8,8 +8,22 @@
    "outputs": [],
    "source": [
     "#import liberaries\n",
+    "import time\n",
+    "from datetime import timedelta, datetime\n",
     "from pubnub.callbacks import SubscribeCallback\n",
     "from pubnub.enums import PNStatusCategory, PNOperationType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d218289b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize global variables\n",
+    "get_hour = None\n",
+    "get_date = None"
    ]
   },
   {
@@ -36,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MySubscribeCallback(SubscribeCallback):\n",
+    "class FirstSubscribeCallback(SubscribeCallback):\n",
     "    \n",
     "    def presence(self, pubnub, presence):\n",
     "        pass  # handle incoming presence data\n",
@@ -63,8 +77,14 @@
     "    \n",
     "    def message(self, pubnub, message):\n",
     "        # Handle new message stored in message.message\n",
-    "        print(message.message)\n",
-    "        return\n",
+    "        creation_time = datetime.strptime(message.message['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
+    "\n",
+    "        global get_hour, get_date\n",
+    "        if get_hour is None:\n",
+    "            get_hour = creation_time.hour\n",
+    "            get_date = creation_time.date()\n",
+    "            print(get_hour, get_date)\n",
+    "            return\n",
     "            "
    ]
   }
