--- a/src/common/Extract_Twitter_Trends.ipynb
+++ b/src/common/Extract_Twitter_Trends.ipynb
@@ -76,7 +76,7 @@
     "                text = str(mytds[i])\n",
     "                # initializing substrings\n",
     "                result = re.search('title>(.*):', text)\n",
-    "                self.top_trends[i] = result.group(1)\n",
+    "                self.top_trends[i] = result.group(1).replace('#', '').lower()\n",
     "\n",
     "\n",
     "        return self.top_trends"
