--- a/src/common/My_Subscribe_Callback.ipynb
+++ b/src/common/My_Subscribe_Callback.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b2e26b49",
    "metadata": {},
    "outputs": [],
@@ -16,19 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d218289b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialize global variables\n",
     "get_hour = None\n",
-    "get_date = None"
+    "get_date = None\n",
+    "\n",
+    "set_minutes = 1\n",
+    "set_top_trends = None\n",
+    "\n",
+    "creation_time = None\n",
+    "start_time = None\n",
+    "end_time = None\n",
+    "session = None\n",
+    "\n",
+    "tweet_count = dict()\n",
+    "trends_tweets = dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "61f67012",
    "metadata": {},
    "outputs": [],
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5cd86377",
    "metadata": {},
    "outputs": [],
@@ -86,6 +97,69 @@
     "            print(get_hour, get_date)\n",
     "            return\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd53b896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MainSubscribeCallback(SubscribeCallback):\n",
+    "    \n",
+    "    def status(self, pubnub, status):\n",
+    "         # handle according to status\n",
+    "        FirstSubscribeCallback.status(self, pubnub, status)\n",
+    "        \n",
+    "    def presence(self, pubnub, status):\n",
+    "         # handle incoming presence data\n",
+    "        FirstSubscribeCallback.presence(self, pubnub, presence)\n",
+    "        \n",
+    "    def message(self, pubnub, message):\n",
+    "        # Handle new message stored in message.message\n",
+    "        \n",
+    "        global creation_time, end_time, start_time, tweet_count, set_top_trends, zip_path, cassandra_configs, trends_tweets, session\n",
+    "        \n",
+    "        creation_time = datetime.strptime(message.message['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
+    "                \n",
+    "        if start_time:\n",
+    "            if creation_time > end_time:\n",
+    "                print(set_minutes, \" minutes have passed \", creation_time)\n",
+    "                \n",
+    "                unix_time = int(time.mktime(start_time.timetuple())) \n",
+    "                key =  str(unix_time) + \"_\" + str(set_minutes)\n",
+    "\n",
+    "                value = dict()\n",
+    "                for trendd, tweet_numbers in tweet_count.items():\n",
+    "                    value[trendd] = tweet_numbers\n",
+    "                    trends_tweets[key] = value\n",
+    "    \n",
+    "                print(\"Twitter tweets\", trends_tweets)\n",
+    "                \n",
+    "                start_time = creation_time\n",
+    "                end_time = creation_time + timedelta(minutes=set_minutes) \n",
+    "                trends_tweets = dict()\n",
+    "            \n",
+    "        else:\n",
+    "            start_time = creation_time\n",
+    "            end_time = creation_time + timedelta(minutes=set_minutes) \n",
+    "            print(\"Process Started at: \", creation_time)\n",
+    "            for trend_number, set_trend in set_top_trends.items():\n",
+    "                tweet_count[set_trend] = 0\n",
+    "                \n",
+    "        trend_list = message.message['entities']['hashtags']\n",
+    "        \n",
+    "\n",
+    "        # and set_country in country\n",
+    "        if trend_list:\n",
+    "            for trend in trend_list:\n",
+    "                # print(creation_time, trend, country)\n",
+    "                trend_text = trend['text'].lower()\n",
+    "                for trend_number, set_trend in set_top_trends.items():\n",
+    "                    if set_trend == trend_text:\n",
+    "                        print(set_trend, trend_text)\n",
+    "                        tweet_count[set_trend] +=1"
    ]
   }
  ],
