--- a/src/config/Read_Configs.ipynb
+++ b/src/config/Read_Configs.ipynb
@@ -20,18 +20,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_pubnub_configurations():\n",
+    "def get_yaml():\n",
     "    try:\n",
     "        path = os.getcwd()\n",
     "        path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\configuration.yaml\"\n",
     "        print(path)\n",
     "        with open(path, 'r') as ymlfile:\n",
     "            cfg = yaml.safe_load(ymlfile)\n",
-    "            pubnub_config=cfg[\"pubnub_config\"]\n",
-    "            return pubnub_config\n",
-    "            \n",
+    "            return cfg\n",
+    "    \n",
     "    except Exception as e:\n",
-    "        print(str(e))"
+    "        print(str(e))\n",
+    "    \n",
+    "def read_pubnub_configurations():\n",
+    "    cfg = get_yaml()\n",
+    "    pubnub_config=cfg[\"pubnub_config\"]\n",
+    "    return pubnub_config\n",
+    "        \n",
+    "def read_cassandra_configurations():\n",
+    "    cfg = get_yaml()\n",
+    "    path = os.getcwd()\n",
+    "    zip_path = str(os.path.abspath(os.path.join(path, os.pardir))) + \"\\src\\data\\secure-connect-twitter-trends-db.zip\"\n",
+    "    cassandra_config=cfg[\"cassandra_config\"]\n",
+    "    return zip_path, cassandra_config"
    ]
   }
  ],
