--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 2\\src\\common\\Extract_Twitter_Trends.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 2\\src\\config\\Read_Configs.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 2\\src\\common\\App.ipynb\n",
-      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 2\\src\\common\\My_Subscribe_Callback.ipynb\n"
+      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 3\\src\\common\\Extract_Twitter_Trends.ipynb\n",
+      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 3\\src\\config\\Read_Configs.ipynb\n",
+      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 3\\src\\common\\App.ipynb\n",
+      "importing Jupyter notebook from C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 3\\src\\common\\My_Subscribe_Callback.ipynb\n"
      ]
     }
    ],
@@ -22,6 +22,7 @@
     "import import_ipynb\n",
     "import requests\n",
     "import time \n",
+    "from datetime import datetime\n",
     "\n",
     "#import ipynb files\n",
     "from common.Extract_Twitter_Trends import Twitter_Trends\n",
@@ -37,6 +38,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e228f910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_config_for_tweets(top_trends, minutes):\n",
+    "    My_Subscribe_Callback.set_minutes = minutes\n",
+    "    My_Subscribe_Callback.set_top_trends = top_trends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "5de8fa45",
    "metadata": {},
    "outputs": [
@@ -44,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 2\\src\\data\\configuration.yaml\n"
+      "C:\\Users\\tarvi\\Twitter Trends Analysis\\Phase 3\\src\\data\\configuration.yaml\n"
      ]
     }
    ],
@@ -54,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "537fc83e",
    "metadata": {},
    "outputs": [],
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8eb3094a",
    "metadata": {},
    "outputs": [
@@ -72,19 +85,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15 2023-02-09\n"
+      "16 2023-02-09\n"
      ]
     }
    ],
    "source": [
     "FirstSubscribeCallback = My_Subscribe_Callback.FirstSubscribeCallback()\n",
     "stream.run(FirstSubscribeCallback)\n",
-    "time.sleep(30)"
+    "time.sleep(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2c76a35b",
    "metadata": {},
    "outputs": [
@@ -92,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15 2023-02-09\n"
+      "16 2023-02-09\n"
      ]
     }
    ],
@@ -104,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "76a08111",
    "metadata": {},
    "outputs": [],
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "df55c5ff",
    "metadata": {},
    "outputs": [
@@ -130,8 +143,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://getdaytrends.com/netherlands/2023-02-09/15/\n",
-      "{1: '#feynec', 2: 'Unilever', 3: 'Emine'}\n"
+      "https://getdaytrends.com/netherlands/2023-02-09/16/\n",
+      "{1: 'feynec', 2: 'burt bacharach', 3: 'hazes'}\n"
      ]
     }
    ],
@@ -139,6 +152,66 @@
     "trends = Twitter_Trends(country, date, hour, trends)\n",
     "top_trends = trends.get_top_trends()\n",
     "print (top_trends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "61df9570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minutes: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# URL for retreiving Time configurations from API \n",
+    "URL = \"https://9188-2a02-a210-2ec2-1480-58ec-cacd-5b36-a6cf.ngrok-free.app/get_timer/\"\n",
+    "  \n",
+    "# sending get request and saving the response \n",
+    "r = requests.get(url = URL)\n",
+    "\n",
+    "# populating config variables \n",
+    "minutes = r.json()\n",
+    "print(\"Minutes:\", minutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7ff9ecb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_config_for_tweets(top_trends, minutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3defef40",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process Started at:  2023-02-09 16:29:53+00:00\n",
+      "5  minutes have passed  2023-02-09 16:34:54+00:00\n",
+      "Twitter tweets {'1675956593_5': {'feynec': 0, 'burt bacharach': 0, 'hazes': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "MainSubscribeCallback = My_Subscribe_Callback.MainSubscribeCallback()\n",
+    "stream.run(MainSubscribeCallback)\n",
+    "time.sleep(minutes * 120)"
    ]
   }
  ],
