--- a/src/common/My_Subscribe_Callback.ipynb
+++ b/src/common/My_Subscribe_Callback.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b2e26b49",
    "metadata": {},
    "outputs": [],
    "source": [
     "#import liberaries\n",
+    "import import_ipynb\n",
     "import time\n",
     "from datetime import timedelta, datetime\n",
     "from pubnub.callbacks import SubscribeCallback\n",
-    "from pubnub.enums import PNStatusCategory, PNOperationType"
+    "from pubnub.enums import PNStatusCategory, PNOperationType\n",
+    "\n",
+    "#import ipynb files\n",
+    "import common.Cassandra_DB_Setup as Cassandra_DB_Setup"
    ]
   },
   {
@@ -25,11 +29,13 @@
     "get_hour = None\n",
     "get_date = None\n",
     "\n",
-    "set_minutes = 1\n",
+    "set_minutes = [1, 5, 10]\n",
     "set_top_trends = None\n",
+    "set_zip_path = None\n",
+    "set_cassandra_configs = None\n",
     "\n",
     "creation_time = None\n",
-    "start_time = None\n",
+    "start_times = [None, None, None]\n",
     "end_time = None\n",
     "session = None\n",
     "\n",
@@ -119,32 +125,38 @@
     "    def message(self, pubnub, message):\n",
     "        # Handle new message stored in message.message\n",
     "        \n",
-    "        global creation_time, end_time, start_time, tweet_count, set_top_trends, zip_path, cassandra_configs, trends_tweets, session\n",
+    "        global creation_time, end_time, start_times, tweet_count, set_top_trends, zip_path, cassandra_configs, trends_tweets, session\n",
     "        \n",
     "        creation_time = datetime.strptime(message.message['created_at'], \"%a %b %d %H:%M:%S %z %Y\")\n",
     "                \n",
-    "        if start_time:\n",
-    "            if creation_time > end_time:\n",
-    "                print(set_minutes, \" minutes have passed \", creation_time)\n",
-    "                \n",
-    "                unix_time = int(time.mktime(start_time.timetuple())) \n",
-    "                key =  str(unix_time) + \"_\" + str(set_minutes)\n",
+    "        if start_times[0] is not None:\n",
+    "            for i in range(len(set_minutes)):\n",
+    "                if start_times[i] is None:\n",
+    "                    start_times[i] = creation_time\n",
+    "                if creation_time == (start_times[i]  + timedelta(minutes=set_minutes[i])) :\n",
+    "                    print(set_minutes[i], \" minutes have passed \", creation_time)\n",
     "\n",
-    "                value = dict()\n",
-    "                for trendd, tweet_numbers in tweet_count.items():\n",
-    "                    value[trendd] = tweet_numbers\n",
-    "                    trends_tweets[key] = value\n",
-    "    \n",
-    "                print(\"Twitter tweets\", trends_tweets)\n",
-    "                \n",
-    "                start_time = creation_time\n",
-    "                end_time = creation_time + timedelta(minutes=set_minutes) \n",
-    "                trends_tweets = dict()\n",
+    "                    unix_time = int(time.mktime(start_times[i].timetuple())) \n",
+    "                    key =  str(unix_time) + \"_\" + str(set_minutes[i])\n",
+    "\n",
+    "                    value = dict()\n",
+    "                    for trendd, tweet_numbers in tweet_count.items():\n",
+    "                        value[trendd] = tweet_numbers\n",
+    "                        trends_tweets[key] = value\n",
+    "\n",
+    "                    print(\"Here's twitter tweets\", trends_tweets)\n",
+    "                    columns = '(StreamTimeKey, TweetCountForTrends)'\n",
+    "                    Cassandra_DB_Setup.insert_into_table_from_df(session, \"twitter_trends\", \"tweets_per_trend\", columns, trends_tweets)\n",
+    "\n",
+    "                    start_times[i] = creation_time\n",
+    "                    trends_tweets = dict()\n",
     "            \n",
     "        else:\n",
-    "            start_time = creation_time\n",
-    "            end_time = creation_time + timedelta(minutes=set_minutes) \n",
+    "            for i in range(len(set_minutes)):\n",
+    "                start_times[i] = creation_time\n",
+    "            session = Cassandra_DB_Setup.cassandra_connection(set_zip_path, set_cassandra_configs)\n",
     "            print(\"Process Started at: \", creation_time)\n",
+    "            print(session)\n",
     "            for trend_number, set_trend in set_top_trends.items():\n",
     "                tweet_count[set_trend] = 0\n",
     "                \n",
